Fixed for mobile for the tabs to be aligned.

--- a/MyBlog/MyBlog/Content/themes/simple/MyBlog.css
+++ b/MyBlog/MyBlog/Content/themes/simple/MyBlog.css
@@ -930,7 +930,7 @@ ul#menu li.selected a {color:#000;}
     overflow: hidden;
     margin-left:auto;
     margin-right:auto;
-    padding: 25px 30px 0px 0px;
+    padding: 30px 30px 0px 0px;
 }
 
     /* ordered list */
